Сделал частичную раскладку навигации на главной странице

--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
       <div class="container">
         <div class="box-header">
           <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" alt="Техномарт"></a>
-          <label><img src="img/icon/icon-search.svg" width="17px" height="17px"><input type="search" name="search"
-              placeholder="Поиск:"></label>
-          <a href="" class="header-marker"><span><img src="img/icon/icon-bookmark.svg" width="14px"
-                height="16px"></span>Закладки</a>
-          <a href="" class="header-basket"><span><img src="img/icon/icon-cart.svg" width="15px"
-                height="15px"></span>Корзина</a>
+          <label><img src="img/icon/icon-search.svg"><input type="search" name="search" placeholder="Поиск:"></label>
+          <a href="" class="header-marker">Закладки</a>
+          <a href="" class="header-basket">Корзина</a>
           <a href="" class="header-order">Оформить заказ</a>
         </div>
       </div>
