Выполнил базовую сетку для index.html b catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -151,7 +151,7 @@
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
               <p class="old-price">30500 Р.</p>
               <p class="new-price">25500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -161,7 +161,7 @@
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
               <p class="old-price">30500 Р.</p>
               <p class="new-price">25500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -171,7 +171,7 @@
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
               <p class="old-price">30500 Р.</p>
               <p class="new-price">25500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -181,7 +181,7 @@
               <h4>Перфоратор BOSCH<br />BFG 3000</h4>
               <p class="old-price">22500 Р.</p>
               <p class="new-price">15500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -191,7 +191,7 @@
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
               <p class="old-price">30500 Р.</p>
               <p class="new-price">25500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -201,7 +201,7 @@
               <h4>Перфоратор BOSCH<br />BFG 2000</h4>
               <p class="old-price"></p>
               <p class="new-price">12500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -211,7 +211,7 @@
               <h4>Перфоратор BOSCH<br />BFG 3000</h4>
               <p class="old-price">22500 Р.</p>
               <p class="new-price">15500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -221,7 +221,7 @@
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
               <p class="old-price">30500 Р.</p>
               <p class="new-price">25500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -231,7 +231,7 @@
               <h4>Перфоратор BOSCH<br />BFG 2000</h4>
               <p class="old-price"></p>
               <p class="new-price">12500 Р.</p>
-              <div>
+              <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
@@ -240,17 +240,17 @@
         </section>
       </section>
       <ul class="catalog-navigation">
-        <li class="button-filter">
-          <a href="" aria-label="На первую страницу каталога">1</a>
+        <li>
+          <a href="" class="button-navigation" aria-label="На первую страницу каталога">1</a>
         </li>
-        <li class="button-filter">
-          <a href="" aria-label="На вторую страницу каталога">2</a>
+        <li>
+          <a href="" class="button-navigation" aria-label="На вторую страницу каталога">2</a>
         </li>
-        <li class="button-filter">
-          <a href="" aria-label="На третью страницу каталога">3</a>
+        <li>
+          <a href="" class="button-navigation" aria-label="На третью страницу каталога">3</a>
         </li>
-        <li class="button-filter">
-          <a href="" aria-label="Следующая страница каталога">Следующая</a>
+        <li>
+          <a href="" class="button-navigation next" aria-label="Следующая страница каталога">Следующая</a>
         </li>
       </ul>
     </section>
