--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h4>Перфоратор BOSCH<br> BFG 9000</h4>
             <p class="old-price">32500 Р.</p>
             <p class="new-price">25500 Р.</p>
-            <div>
+            <div class="item-button">
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
@@ -119,7 +119,7 @@
             <h4>Перфоратор BOSCH<br> BFG 3000</h4>
             <p class="old-price">22500 Р.</p>
             <p class="new-price">15500 Р.</p>
-            <div>
+            <div class="item-button">
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
@@ -129,7 +129,7 @@
             <h4>Перфоратор BOSCH<br> BFG 6000</h4>
             <p class="old-price">30500 Р.</p>
             <p class="new-price">25500 Р.</p>
-            <div>
+            <div class="item-button">
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
@@ -139,7 +139,7 @@
             <h4>Перфоратор BOSCH<br> BFG 2000</h4>
             <p class="old-price"></p>
             <p class="new-price">12500 Р.</p>
-            <div>
+            <div class="item-button">
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
