--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
       </nav>
     </div>
   </header>
-  <main class="container">
-    <section class="navigation-catalog">
+  <main>
+    <section class="features-catalog container">
       <h2 class="visually-hidden">КАТАЛОГ</h2> <!-- Скрытый заголовок-->
       <ul class="catalog-menu-list">
         <li class="catalog-menu-item materials">
           <h3>Материалы</h3>
-          <a href="">На любой вкус</a>
+          <a href="catalog.html" class="button-item-menu">На любой вкус</a>
           <img src="img/icon/icon-materials.svg" width="44px" height="65px" alt="Материалы">
         </li>
         <li class="catalog-menu-item tool">
           <h3>Инструмент</h3>
-          <a href="">На все случаи</a>
+          <a href="catalog.html" class="button-item-menu">На все случаи</a>
           <img src="img/icon/icon-tool.svg" width="75px" height="61px" alt="Инструмент">
         </li>
         <li class="catalog-menu-item machinery">
           <h3>Техника</h3>
-          <a href="" aria-label="Техника для стройки">Для стройки</a>
+          <a href="catalog.html" class="button-item-menu" aria-label="Техника для стройки">Для стройки</a>
           <img src="img/icon/icon-machinery.svg" width="78px" height="62px" alt="Трактор">
         </li>
         <li class="catalog-menu-item hummer-drill">
@@ -83,24 +83,24 @@
         </li>
         <li class="catalog-menu-item discount">
           <h3>Скидка 50%</h3>
-          <a href="" aria-label="Скидка 50% на 350 товаров">На 350 товаров</a>
+          <a href="catalog.html" class="button-item-menu" aria-label="Скидка 50% на 350 товаров">На 350 товаров</a>
           <img src="img/icon/icon-discount.svg" width="59px" height="72px" alt="">
         </li>
         <li class="catalog-menu-item delivery">
           <h3>Доставка</h3>
-          <a href="" aria-label="Бесплатная доставка">Бесплатно</a>
+          <a href="catalog.html" class="button-item-menu" aria-label="Бесплатная доставка">Бесплатно</a>
           <img src="img/icon/icon-delivery.svg" width="78px" height="63px" alt="">
         </li>
       </ul>
     </section>
-    <section class="popular-product">
+    <section class="popular-product container">
       <h2 class="visually-hidden">ТОВАРЫ</h2> <!-- Скрытый заголовок-->
       <div class="popular-product-title">
         <h3>Популярные товары:</h3>
-        <a href="" class="link-button">Все популярные товары</a>
+        <a href="" class="link-button popular-button-product">Все популярные товары</a>
       </div>
       <div class="popular-product-box">
-        <ul class="product-list">
+        <ul class="popular-list">
           <li class="product-item">
             <img src="img/hummer-drill-bfg9000.jpg" width="184" height="164" alt="Перфоратор Bosch BFG 9000">
             <h4>Перфоратор BOSCH<br> BFG 9000</h4>
@@ -144,11 +144,11 @@
         </ul>
       </div>
     </section>
-    <section class="popular-manufacturer">
+    <section class="popular-manufacturer container">
       <h2 class="visually-hidden">ПРОИЗВОДИТЕЛИ</h2> <!-- Скрытый заголовок-->
       <div class="popular-manufacturer-title">
         <h3>Популярные производители:</h3>
-        <a href="" class="link-button">Все производители</a>
+        <a href="" class="link-button popular-button-manufacturer">Все производители</a>
       </div>
       <div class="popular-manufacturer-box">
         <ul class="manufacturer-list">
@@ -166,45 +166,49 @@
     </section>
     <section class="serviсes">
       <h2 class="visually-hidden">СЕРВИСЫ</h2> <!-- Скрытый заголовок-->
-      <div class="services-title">
-        <h3>Сервисы</h3>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-      </div>
-      <div class="services-menu">
-        <ul>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Гарантия</a></li>
-          <li><a href="">Кредит</a></li>
-        </ul>
-      </div>
-      <div class="services-delivery">
-        <h4>Доставка</h4>
-        <p>Мы с удовольствием доставим ваш товар прямо<br>
-          к вашему подъезду совершенно бесплатно!<br>
-          Ведь мы неплохо заработаем,<br>
-          поднимая его на ваш этаж!</p>
-        <img src="img/service-car-delivery.png" width="468px" height="261px" alt="Автомобиль доставки">
-      </div>
-      <div class="services-guarantee">
-        <h4>Гарантия</h4>
-        <p>Если купленный у нас товар поломается или заискрит,<br>
-          а также в случае пожара, спровоцированного его<br>
-          возгоранием,вы всегда можете быть уверены в нашей<br>
-          гарантии.Мы обменяем сгоревший товар на новый<br>
-          Дом уж восстановите как-нибудь сами
-        </p>
-        <img src="img/service-guarantee-100.png" width="389px" height="283px" alt="100%">
-      </div>
-      <div class="services-credit">
-        <h4>Кредит</h4>
-        <p>Залезть в долговую яму стало проще!<br>
-          Кредитные консультанты придут вам на помощь.</p>
-        <a href="" aria-label="Отправить заявку на кредит" class="link-button">Отправить заявку</a>
-        <img src="img/service-credit.png" width="465px" height="285px" alt="">
+      <div class="services-box-wrapper container">
+        <div class="services-title">
+          <h3>Сервисы</h3>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        </div>
+        <div class="services-menu">
+          <ul>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Гарантия</a></li>
+            <li><a href="">Кредит</a></li>
+          </ul>
+        </div>
+        <div class="services-menu-list">
+          <div class="services-delivery">
+            <h4>Доставка</h4>
+            <p>Мы с удовольствием доставим ваш товар прямо<br>
+              к вашему подъезду совершенно бесплатно!<br>
+              Ведь мы неплохо заработаем,<br>
+              поднимая его на ваш этаж!</p>
+            <img src="img/service-car-delivery.png" width="468px" height="261px" alt="Автомобиль доставки">
+          </div>
+          <div class="services-guarantee">
+            <h4>Гарантия</h4>
+            <p>Если купленный у нас товар поломается или заискрит,<br>
+              а также в случае пожара, спровоцированного его<br>
+              возгоранием,вы всегда можете быть уверены в нашей<br>
+              гарантии.Мы обменяем сгоревший товар на новый<br>
+              Дом уж восстановите как-нибудь сами
+            </p>
+            <img src="img/service-guarantee-100.png" width="389px" height="283px" alt="100%">
+          </div>
+          <div class="services-credit">
+            <h4>Кредит</h4>
+            <p>Залезть в долговую яму стало проще!<br>
+              Кредитные консультанты придут вам на помощь.</p>
+            <a href="" aria-label="Отправить заявку на кредит" class="link-button">Отправить заявку</a>
+            <img src="img/service-credit.png" width="465px" height="285px" alt="">
+          </div>
+        </div>
       </div>
     </section>
-    <section class="company-contact">
+    <section class="company-contact container">
       <h2 class="visually-hidden">О КОМПАНИИ и КОНТАКТЫ</h2> <!-- Скрытый заголовок-->
       <div class="company-title">
         <h3>КОМПАНИЯ «ТЕХНОМАРТ»</h3>
