Начал добавлять декоративные элементы index.html

--- a/catalog.html
+++ b/catalog.html
@@ -81,7 +81,7 @@
           </fieldset>
           <fieldset class="filter-manufacturer">
             <legend>Производители:</legend>
-            <ul class="manufacturer-list">
+            <ul class="manufacturer-list-filter">
               <li>
                 <input type="checkbox" name="bosch" id="filter-bosch" />
                 <label for="filter-bosch">Bosch</label>
