--- a/index.html
+++ b/index.html
@@ -17,35 +17,37 @@
         <div class="box-header">
           <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" alt="Техномарт"></a>
           <label><img src="img/icon/icon-search.svg"><input type="search" name="search" placeholder="Поиск:"></label>
-          <a href="" class="header-marker">Закладки</a>
-          <a href="" class="header-basket">Корзина</a>
-          <a href="" class="header-order">Оформить заказ</a>
+          <div class="header-list">
+            <ul>
+              <li><a href="#" class="header-marker">Закладки</a></li>
+              <li><a href="#" class="header-basket">Корзина</a></li>
+              <li><a href="#" class="header-order">Оформить заказ</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="main-header">
-        <div class="main-header-title">
-          <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
-        </div>
+        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
         <div class="main-header-contact">
-          <p>+7 (812) 555-05-55</p>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
+          <p class="number-phone">+7 (812) 555-05-55</p>
+          <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
         </div>
         <div class="user-navigation">
-          <a href="">Войти</a>
-          <a href="">Регистрация</a>
+          <a href="#" class="login">Войти</a>
+          <a href="#">Регистрация</a>
         </div>
       </div>
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li><a href="index.html">Главная</a></li>
-          <li><a href="">Компания</a></li>
+          <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="">Спецпредложения</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -57,39 +59,32 @@
         <li class="catalog-menu-item materials">
           <h3>Материалы</h3>
           <a href="catalog.html" class="button-item-menu">На любой вкус</a>
-          <img src="img/icon/icon-materials.svg" width="44px" height="65px" alt="Материалы">
         </li>
         <li class="catalog-menu-item tool">
           <h3>Инструмент</h3>
           <a href="catalog.html" class="button-item-menu">На все случаи</a>
-          <img src="img/icon/icon-tool.svg" width="75px" height="61px" alt="Инструмент">
         </li>
         <li class="catalog-menu-item machinery">
           <h3>Техника</h3>
-          <a href="catalog.html" class="button-item-menu" aria-label="Техника для стройки">Для стройки</a>
-          <img src="img/icon/icon-machinery.svg" width="78px" height="62px" alt="Трактор">
+          <a href="catalog.html" class="button-item-menu">Для стройки</a>
         </li>
         <li class="catalog-menu-item hummer-drill">
           <h3>Перфораторы</h3>
           <p>Настоящие мужские игрушки</p>
-          <a href="catalog.html" class="link-button hummer-drill-button"
-            aria-label="Открыть каталог перфераторов">Открыть каталог</a>
+          <a href="catalog.html" class="link-button hummer-drill-button">Открыть каталог</a>
         </li>
         <li class="catalog-menu-item screwd-river">
           <h3>Дрели</h3>
           <p>Соседям на радость!</p>
-          <a href="catalog.html" class="link-button screwd-river-button" aria-label="Открыть каталог дрелей">Открыть
-            каталог</a>
+          <a href="catalog.html" class="link-button screwd-river-button">Открыть каталог</a>
         </li>
         <li class="catalog-menu-item discount">
           <h3>Скидка 50%</h3>
-          <a href="catalog.html" class="button-item-menu" aria-label="Скидка 50% на 350 товаров">На 350 товаров</a>
-          <img src="img/icon/icon-discount.svg" width="59px" height="72px" alt="">
+          <a href="catalog.html" class="button-item-menu">На 350 товаров</a>
         </li>
         <li class="catalog-menu-item delivery">
           <h3>Доставка</h3>
-          <a href="catalog.html" class="button-item-menu" aria-label="Бесплатная доставка">Бесплатно</a>
-          <img src="img/icon/icon-delivery.svg" width="78px" height="63px" alt="">
+          <a href="catalog.html" class="button-item-menu">Бесплатно</a>
         </li>
       </ul>
     </section>
@@ -97,7 +92,7 @@
       <h2 class="visually-hidden">ТОВАРЫ</h2> <!-- Скрытый заголовок-->
       <div class="popular-product-title">
         <h3>Популярные товары:</h3>
-        <a href="" class="link-button popular-button-product">Все популярные товары</a>
+        <a href="#" class="link-button popular-button-product">Все популярные товары</a>
       </div>
       <div class="popular-product-box">
         <ul class="popular-list">
@@ -148,19 +143,19 @@
       <h2 class="visually-hidden">ПРОИЗВОДИТЕЛИ</h2> <!-- Скрытый заголовок-->
       <div class="popular-manufacturer-title">
         <h3>Популярные производители:</h3>
-        <a href="" class="link-button popular-button-manufacturer">Все производители</a>
+        <a href="#" class="link-button popular-button-manufacturer">Все производители</a>
       </div>
       <div class="popular-manufacturer-box">
         <ul class="manufacturer-list">
-          <li><a href=""><img src="img/brand-logo-bosch.png" width="126" height="37" alt="Компания Bosch"></a></li>
-          <li><a href=""><img src="img/brand-logo-makita.png" width="123" height="40" alt="Компания Makita"></a></li>
-          <li><a href=""><img src="img/brand-logo-dewalt.png" width="146" height="44" alt="Компания DeWalt"></a></li>
-          <li><a href=""><img src="img/brand-logo-interscol.png" width="200" height="86" alt="Компания Интерскол"></a>
+          <li><a href="#"><img src="img/brand-logo-bosch.png" width="126" height="37" alt="Компания Bosch"></a></li>
+          <li><a href="#"><img src="img/brand-logo-makita.png" width="123" height="40" alt="Компания Makita"></a></li>
+          <li><a href="#"><img src="img/brand-logo-dewalt.png" width="146" height="44" alt="Компания DeWalt"></a></li>
+          <li><a href="#"><img src="img/brand-logo-interscol.png" width="200" height="86" alt="Компания Интерскол"></a>
           </li>
-          <li><a href=""><img src="img/brand-logo-hitachi.png" width="169" height="31" alt="Компания Hitachi"></a></li>
-          <li><a href=""><img src="img/brand-logo-lg.png" width="121" height="73" alt="Компания LG"></a></li>
-          <li><a href=""><img src="img/brand-logo-aeg.png" width="151" height="96" alt="Компания AEG"></a></li>
-          <li><a href=""><img src="img/brand-logo-metabo.png" width="204" height="69" alt="Компания Metabo"></a></li>
+          <li><a href="#"><img src="img/brand-logo-hitachi.png" width="169" height="31" alt="Компания Hitachi"></a></li>
+          <li><a href="#"><img src="img/brand-logo-lg.png" width="121" height="73" alt="Компания LG"></a></li>
+          <li><a href="#"><img src="img/brand-logo-aeg.png" width="151" height="96" alt="Компания AEG"></a></li>
+          <li><a href="#"><img src="img/brand-logo-metabo.png" width="204" height="69" alt="Компания Metabo"></a></li>
         </ul>
       </div>
     </section>
@@ -174,9 +169,9 @@
         </div>
         <div class="services-menu">
           <ul>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Гарантия</a></li>
-            <li><a href="">Кредит</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Кредит</a></li>
           </ul>
         </div>
         <div class="services-menu-list">
@@ -186,7 +181,6 @@
               к вашему подъезду совершенно бесплатно!<br>
               Ведь мы неплохо заработаем,<br>
               поднимая его на ваш этаж!</p>
-            <img src="img/service-car-delivery.png" width="468px" height="261px" alt="Автомобиль доставки">
           </div>
           <div class="services-guarantee">
             <h4>Гарантия</h4>
@@ -196,14 +190,14 @@
               гарантии.Мы обменяем сгоревший товар на новый<br>
               Дом уж восстановите как-нибудь сами
             </p>
-            <img src="img/service-guarantee-100.png" width="389px" height="283px" alt="100%">
+            <img src="img/service-guarantee-100.png" width="389" height="283" alt="Гарантия на 100%">
           </div>
           <div class="services-credit">
             <h4>Кредит</h4>
             <p>Залезть в долговую яму стало проще!<br>
               Кредитные консультанты придут вам на помощь.</p>
-            <a href="" aria-label="Отправить заявку на кредит" class="link-button">Отправить заявку</a>
-            <img src="img/service-credit.png" width="465px" height="285px" alt="">
+            <a href="#" class="link-button">Отправить заявку</a>
+            <img src="img/service-credit.png" width="465" height="285" alt="">
           </div>
         </div>
       </div>
@@ -224,7 +218,7 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a href="" class="link-button">ПОДРОБНЕЕ О КОМПАНИИ</a>
+        <a href="#" class="link-button">ПОДРОБНЕЕ О КОМПАНИИ</a>
       </div>
       <div class="contact">
         <h3>Контакты</h3>
@@ -232,7 +226,7 @@
           заехав в наш офис:
         </p>
         <img src="img/card-location.svg" width="300" height="158" alt="Как к нам проехать">
-        <a href="" class="link-button">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</a>
+        <a href="#" class="link-button">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</a>
       </div>
       <section class="modal-form">
         <h2 class="visually-hidden">Форма обратной связи</h2> <!-- Скрытый заголовок-->
@@ -249,10 +243,9 @@
               </label>
             </p>
             <p>
-              <label for="text-letter">Текст письма:
-                <textarea name="text-letter" id="text-letter" cols="30" rows="10"
-                  placeholder="В свободной форме"></textarea>
-              </label>
+              <label for="text-letter">Текст письма:</label>
+              <textarea name="text-letter" id="text-letter" cols="30" rows="10"
+                placeholder="В свободной форме"></textarea>
             </p>
             <button type="submit" class="link-button">Оформить заказ</button>
             <button type="button" class="button-close">x</button>
@@ -271,7 +264,7 @@
       <div class="container">
         <div class="footer-box">
           <div class="footer-logo">
-            <a href="">ТЕХНОМАРТ</a>
+            <a href="index.html">ТЕХНОМАРТ</a>
           </div>
           <div class="footer-address">
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
@@ -298,16 +291,16 @@
       <div class="footer-copyright">
         <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
         <ul class="social">
-          <li><a href="" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26px"
-                height="15px"></a></li>
-          <li><a href="" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12px"
-                height="22px"></a></li>
-          <li><a href="" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg"
-                width="21px" height="21px"></a></li>
+          <li><a href="#" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26"
+                height="15"></a></li>
+          <li><a href="#" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12"
+                height="22"></a></li>
+          <li><a href="#" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg"
+                width="21" height="21"></a></li>
         </ul>
         <div class="feedback-email">
           <p>Обратная связь:</p>
-          <a href="">mail@htmlacademy.ru</a>
+          <a href="#">mail@htmlacademy.ru</a>
         </div>
         <div class="footer-developer">
           <p>Разработано -</p>
