Добавил декоративные элементы в фильтр catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -86,24 +86,26 @@
           <fieldset class="filter-manufacturer">
             <legend>Производители:</legend>
             <ul class="manufacturer-list-filter">
-              <li>
-                <input type="checkbox" name="bosch" id="filter-bosch" />
+              <li class="manufacturer-item-filter">
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" />
                 <label for="filter-bosch">Bosch</label>
               </li>
-              <li>
-                <input type="checkbox" name="interscol" id="filter-interscol" />
+              <li class="manufacturer-item-filter">
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="interscol"
+                  id="filter-interscol" />
                 <label for="filter-interscol">Интерскол</label>
               </li>
-              <li>
-                <input type="checkbox" name="makita" id="filter-makita" />
+              <li class="manufacturer-item-filter">
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="makita" id="filter-makita" />
                 <label for="filter-makita">Makita</label>
               </li>
-              <li>
-                <input type="checkbox" name="dewalt" id="filter-dewalt" />
+              <li class="manufacturer-item-filter">
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt" />
                 <label for="filter-dewalt">Dewalt</label>
               </li>
-              <li>
-                <input type="checkbox" name="hitachi" id="filter-hitachi" />
+              <li class="manufacturer-item-filter">
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="hitachi"
+                  id="filter-hitachi" />
                 <label for="filter-hitachi">Hitachi</label>
               </li>
             </ul>
@@ -111,12 +113,14 @@
           <fieldset class="filter-power-supply">
             <legend>Питание:</legend>
             <ul class="power-supply-list">
-              <li>
-                <input type="radio" name="power-supply" value="battery" id="filter-battery" />
+              <li class="power-supply-item">
+                <input class="visually-hidden filter-input-radio" type="radio" name="power-supply" value="battery"
+                  id="filter-battery" />
                 <label for="filter-battery">Аккумуляторные</label>
               </li>
-              <li>
-                <input type="radio" name="power-supply" value="network" id="filter-network" />
+              <li class="power-supply-item">
+                <input class="visually-hidden filter-input-radio" type="radio" name="power-supply" value="network"
+                  id="filter-network" />
                 <label for="filter-network">Сетевые</label>
               </li>
             </ul>
