Продолжил дополнять декоративные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -15,29 +15,33 @@
     <div class="box-header-wrapper">
       <div class="container">
         <div class="box-header">
-          <a class="header-logo">ТЕХНОМАРТ</a>
+          <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" alt="На главную"></a>
           <label><input type="search" name="search" placeholder="Поиск:"></label>
-          <a href="" class="header-marker"><span>Закладки</a>
-          <a href="" class="header-basket">Корзина</a>
-          <a href="" class="header-order">Оформить заказ</a>
+          <div class="header-list">
+            <ul>
+              <li><a href="#" class="header-marker">Закладки</a></li>
+              <li><a href="#" class="header-basket">Корзина</a></li>
+              <li><a href="#" class="header-order">Оформить заказ</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="main-header">
-        <div class="main-header-title">
-          <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
-        </div>
+        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
         <div class="main-header-contact">
-          <p>+7 (812) 555-05-55</p>
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
+          <p class="number-phone">+7 (812) 555-05-55</p>
+          <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 *</p>
         </div>
-        <div class="user-navigation">
+        <div class="authorized-user">
           <div class="user-name">
             <p>Равшан Джамшутович</p>
           </div>
-          <a href="" class="user-order">Мои заказы</a>
-          <a href="" class="user-cabinet">Личный кабинет</a>
+          <div class="user-links">
+            <a href="" class="user-order">Мои заказы</a>
+            <a href="" class="user-cabinet">Личный кабинет</a>
+          </div>
         </div>
       </div>
       <nav class="main-navigation">
@@ -155,6 +159,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
@@ -165,6 +170,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
@@ -175,6 +181,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000" />
@@ -185,6 +192,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
@@ -195,6 +203,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000" />
@@ -205,6 +214,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000" />
@@ -215,6 +225,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
@@ -225,6 +236,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
             <li class="product-item">
               <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000" />
@@ -235,6 +247,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
+              <p class="new-item">New</p>
             </li>
           </ul>
         </section>
@@ -279,11 +292,14 @@
     <div class="footer-box-wrapper">
       <div class="container">
         <div class="footer-box">
-          <div class="footer-logo">
-            <a href="">ТЕХНОМАРТ</a>
-          </div>
-          <div class="footer-address">
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+          <div class="footer-left">
+            <div class="footer-logo">
+              <a href="index.html"><img src="img/icon/icon-technomart-logo.svg" width="138" height="23"
+                  alt="На главную"></a>
+            </div>
+            <div class="footer-address">
+              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
+            </div>
           </div>
           <div class="footer-site-navigation">
             <ul class="footer-navigation-top">
@@ -303,25 +319,22 @@
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="footer-copyright">
         <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
         <ul class="social">
-          <li><a href="" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26px"
-                height="15px"></a></li>
-          <li><a href="" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12px"
-                height="22px"></a></li>
-          <li><a href="" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg"
-                width="21px" height="21px"></a></li>
+          <li><a href="#" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26"
+                height="15"></a></li>
+          <li><a href="#" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12"
+                height="22"></a></li>
+          <li><a href="#" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg"
+                width="21" height="21"></a></li>
         </ul>
         <div class="feedback-email">
-          <p>Обратная связь:</p>
-          <a href="">mail@htmlacademy.ru</a>
+          <p>Обратная связь:<br><span><a href="#">mail@htmlacademy.ru</a></span></p>
         </div>
         <div class="footer-developer">
-          <p>Разработано -</p>
-          <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+          <p>Разработано -<br><span><a href="https://htmlacademy.ru">htmlacademy.ru</a></span></p>
         </div>
       </div>
     </div>
