--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="box-header-wrapper">
       <div class="container">
         <div class="box-header">
-          <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" alt="Техномарт"></a>
-          <label><img src="img/icon/icon-search.svg"><input type="search" name="search" placeholder="Поиск:"></label>
+          <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" alt="На главную"></a>
+          <label><input type="search" name="search" placeholder="Поиск:"></label>
           <div class="header-list">
             <ul>
               <li><a href="#" class="header-marker">Закладки</a></li>
@@ -105,6 +105,7 @@
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
+            <p class="new-item">New</p>
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000">
@@ -115,6 +116,7 @@
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
+            <p class="new-item">New</p>
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000">
@@ -125,6 +127,7 @@
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
+            <p class="new-item">New</p>
           </li>
           <li class="product-item">
             <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
@@ -135,6 +138,7 @@
               <button type="button" class="button-buy">Купить</button>
               <button type="button" class="button-marker">В закладки</button>
             </div>
+            <p class="new-item">New</p>
           </li>
         </ul>
       </div>
@@ -161,44 +165,50 @@
     </section>
     <section class="serviсes">
       <h2 class="visually-hidden">СЕРВИСЫ</h2> <!-- Скрытый заголовок-->
-      <div class="services-box-wrapper container">
+      <div class="services-slider container">
         <div class="services-title">
           <h3>Сервисы</h3>
           <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
             Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
-        <div class="services-menu">
-          <ul>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-            <li><a href="#">Кредит</a></li>
+        <div class="services-slider-controls">
+          <ul class="control-list">
+            <li class="control-item">
+              <a href="#">Доставка</a>
+            </li>
+            <li class="control-item">
+              <a class="control-current" href="#">Гарантия</a>
+            </li>
+            <li class="control-item">
+              <a href="#">Кредит</a>
+            </li>
           </ul>
         </div>
-        <div class="services-menu-list">
-          <div class="services-delivery">
-            <h4>Доставка</h4>
-            <p>Мы с удовольствием доставим ваш товар прямо<br>
-              к вашему подъезду совершенно бесплатно!<br>
-              Ведь мы неплохо заработаем,<br>
-              поднимая его на ваш этаж!</p>
-          </div>
-          <div class="services-guarantee">
-            <h4>Гарантия</h4>
-            <p>Если купленный у нас товар поломается или заискрит,<br>
-              а также в случае пожара, спровоцированного его<br>
-              возгоранием,вы всегда можете быть уверены в нашей<br>
-              гарантии.Мы обменяем сгоревший товар на новый<br>
-              Дом уж восстановите как-нибудь сами
-            </p>
-            <img src="img/service-guarantee-100.png" width="389" height="283" alt="Гарантия на 100%">
-          </div>
-          <div class="services-credit">
-            <h4>Кредит</h4>
-            <p>Залезть в долговую яму стало проще!<br>
-              Кредитные консультанты придут вам на помощь.</p>
-            <a href="#" class="link-button">Отправить заявку</a>
-            <img src="img/service-credit.png" width="465" height="285" alt="">
-          </div>
+        <div class="slider-wrapper background-wrapper-3">
+          <ul class="services-slider-list">
+            <li class="services-slide-item slide">
+              <h4>Доставка</h4>
+              <p>Мы с удовольствием доставим ваш товар прямо<br>
+                к вашему подъезду совершенно бесплатно!<br>
+                Ведь мы неплохо заработаем,<br>
+                поднимая его на ваш этаж!</p>
+            </li>
+            <li class="services-slide-item slide">
+              <h4>Гарантия</h4>
+              <p>Если купленный у нас товар поломается или заискрит,<br>
+                а также в случае пожара, спровоцированного его<br>
+                возгоранием,вы всегда можете быть уверены в нашей<br>
+                гарантии.Мы обменяем сгоревший товар на новый<br>
+                Дом уж восстановите как-нибудь сами
+              </p>
+            </li>
+            <li class="services-slide-item slide slide-current">
+              <h4>Кредит</h4>
+              <p>Залезть в долговую яму стало проще!<br>
+                Кредитные консультанты придут вам на помощь.</p>
+              <a href="#" class="link-button">Отправить заявку</a>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -218,7 +228,7 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a href="#" class="link-button">ПОДРОБНЕЕ О КОМПАНИИ</a>
+        <a href="#" class="link-button info-button">Подробнее о компании</a>
       </div>
       <div class="contact">
         <h3>Контакты</h3>
@@ -226,7 +236,7 @@
           заехав в наш офис:
         </p>
         <img src="img/card-location.svg" width="300" height="158" alt="Как к нам проехать">
-        <a href="#" class="link-button">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ</a>
+        <a href="#" class="link-button map-button">Заблудились? Напишите нам!</a>
       </div>
       <section class="modal-form">
         <h2 class="visually-hidden">Форма обратной связи</h2> <!-- Скрытый заголовок-->
@@ -263,11 +273,14 @@
     <div class="footer-box-wrapper">
       <div class="container">
         <div class="footer-box">
-          <div class="footer-logo">
-            <a href="index.html">ТЕХНОМАРТ</a>
-          </div>
-          <div class="footer-address">
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+          <div class="footer-left">
+            <div class="footer-logo">
+              <a href="index.html"><img src="img/icon/icon-technomart-logo.svg" width="138" height="23"
+                  alt="На главную"></a>
+            </div>
+            <div class="footer-address">
+              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</p>
+            </div>
           </div>
           <div class="footer-site-navigation">
             <ul class="footer-navigation-top">
@@ -299,12 +312,10 @@
                 width="21" height="21"></a></li>
         </ul>
         <div class="feedback-email">
-          <p>Обратная связь:</p>
-          <a href="#">mail@htmlacademy.ru</a>
+          <p>Обратная связь:<br><span><a href="#">mail@htmlacademy.ru</a></span></p>
         </div>
         <div class="footer-developer">
-          <p>Разработано -</p>
-          <a href="https://htmlacademy.ru">htmlacademy.ru</a>
+          <p>Разработано -<br><span><a href="https://htmlacademy.ru">htmlacademy.ru</a></span></p>
         </div>
       </div>
     </div>
