Добавил декоративные элементы index.html и catalog.html  кроме модальных окон

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div class="box-header-wrapper">
       <div class="container">
         <div class="box-header">
-          <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" alt="На главную"></a>
+          <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" width="108" height="18"
+              alt="На главную"></a>
           <label><input type="search" name="search" placeholder="Поиск:"></label>
           <div class="header-list">
             <ul>
