--- a/catalog.html
+++ b/catalog.html
@@ -133,20 +133,26 @@
         <section class="catalog-sorting">
           <h3>Cортировка:</h3>
           <ul class="sorting-list">
-            <li>
-              <a href="">По цене</a>
+            <li class="sorting-price">
+              <a href="#">По цене</a>
             </li>
-            <li>
-              <a href="">По типу</a>
+            <li class="sorting-tip">
+              <a href="#">По типу</a>
             </li>
-            <li>
+            <li class="sorting-function">
               <a href="">По функционалу</a>
             </li>
-            <li>
-              <a href="" class="button-up" aria-label="Сортировать по возрастанию">Стрелка вверх</a>
+            <li class="button-up">
+              <a href="#" aria-label="Сортировать по возрастанию"><svg width="12" height="10" viewBox="0 0 12 10"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5.66241 0L11.1624 10L0.162415 10" fill="#C5C5C5" />
+                </svg></a>
             </li>
-            <li>
-              <a href="" class="button-up" aria-label="Сортировать по убыванию">Стрелка вниз</a>
+            <li class="button-down">
+              <a href="#" aria-label="Сортировать по убыванию"><svg width="12" height="10" viewBox="0 0 12 10"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5.66241 10L0.162415 0H11.1624" fill="#C5C5C5" />
+                </svg></a>
             </li>
           </ul>
         </section>
