Начал делать модальные окна на главной странице

--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
           </p>
           <p class="feedback-item">
             <label for="text-letter">Текст письма:</label>
-            <textarea name="text-letter" id="text-letter" cols="30" rows="10"
-              placeholder="В свободной форме"></textarea>
+            <textarea name="text-letter" id="text-letter" cols="61" rows="6" placeholder="В свободной форме"></textarea>
           </p>
           <div class="feedback-buttons">
             <button type="submit" class="link-button">Отправить</button>
