--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,46 @@
         <form action="https://echo.htmlacademy.ru" method="get">
           <fieldset class="filter-price">
             <legend>Цена:</legend>
-            <input type="range" name="price" id="price" min="0" max="300" />
+            <div class="range-filter">
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar"></div>
+                  <svg class="toggle toggle-min" tabindex="0" width="20" height="22" viewBox="0 0 20 22" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3"
+                      d="M10 20C4.477 20 0 15.522 0 10V12C0 17.522 4.477 22 10 22C15.522 22 20 17.522 20 12V10C20 15.522 15.522 20 10 20Z"
+                      fill="#ABABAB" />
+                    <path
+                      d="M10 20C15.5228 20 20 15.5228 20 10C20 4.47715 15.5228 0 10 0C4.47715 0 0 4.47715 0 10C0 15.5228 4.47715 20 10 20Z"
+                      fill="white" />
+                    <path
+                      d="M10 12C11.1046 12 12 11.1046 12 10C12 8.89543 11.1046 8 10 8C8.89543 8 8 8.89543 8 10C8 11.1046 8.89543 12 10 12Z"
+                      fill="#ABABAB" />
+                  </svg>
+                  <svg class="toggle toggle-max" tabindex="0" width="20" height="22" viewBox="0 0 20 22" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="0.3"
+                      d="M10 20C4.477 20 0 15.522 0 10V12C0 17.522 4.477 22 10 22C15.522 22 20 17.522 20 12V10C20 15.522 15.522 20 10 20Z"
+                      fill="#ABABAB" />
+                    <path
+                      d="M10 20C15.5228 20 20 15.5228 20 10C20 4.47715 15.5228 0 10 0C4.47715 0 0 4.47715 0 10C0 15.5228 4.47715 20 10 20Z"
+                      fill="white" />
+                    <path
+                      d="M10 12C11.1046 12 12 11.1046 12 10C12 8.89543 11.1046 8 10 8C8.89543 8 8 8.89543 8 10C8 11.1046 8.89543 12 10 12Z"
+                      fill="#ABABAB" />
+                  </svg>
+                </div>
+              </div>
+              <div class="price-controls">
+                <label class="min-price">
+                  <input type="number" name="min-price" value="0">
+                </label>
+                <p>—</p>
+                <label class="max-price">
+                  <input type="number" name="max-price" value="30000">
+                </label>
+              </div>
+            </div>
           </fieldset>
           <fieldset class="filter-manufacturer">
             <legend>Производители:</legend>
